--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
-  <div class="qr-code-background">
+  <main class="qr-code-background">
     <img src="images/image-qr-code.png" alt="qr-code">
     <h3>Improve your front-end skills by building projects</h3>
     <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
-  </div>
+  </main>
   
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Mohit Pandey</a>.
-  </div>
+  </footer>
 </body>
 </html>
